--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -141,6 +141,10 @@ h2 {
     background: #f9dcdc;
 }
 
+#penaltyMinutesInput, #penaltySecondsInput, #penaltyPlayerInput {
+    width:40px;
+}
+
 .score-widget {
     display: inline-flex;
     flex-direction: column;
@@ -216,6 +220,22 @@ h2 {
     border-radius: 8px;
     box-shadow: 0 2px 16px rgba(0,0,0,0.2);
     min-width: 260px;
+}
+
+#timeoutModal > .modal-content {
+    width:70vw; 
+    height:70vh; 
+    display:flex;
+    background-color: rgba(51, 51, 51, .7) !important;
+    color: #ccc; 
+    flex-direction:column; 
+    align-items:center; 
+    justify-content:center;
+}
+
+#timeoutCountdown {
+    font-size:15em; 
+    margin:30px 0;
 }
 
 .main-layout {
